# mail-protection

./: README.md  api.py  main.py  parsers.py  pyproject.toml  smtp.py
classifier/: analyzer.py  classifier.py  classifier_rules.py  main.py
classifier/features/: core.py  header.py  ml.py  reputational.py
classifier/models/: impoersonation_RF.ipynb  text_MLP_TF-IDF.py
